# micromissiles-unity-plugins

./: .bazelrc  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: build.yaml  ci.yaml
assignment/: BUILD.bazel  assignment.cc  assignment.def  assignment.h  assignment_plugin.cc  cover_assignment.cc  cover_assignment.h  cover_assignment_test.cc  covered_assignment.cc  covered_assignment.h  covered_assignment_test.cc  even_assignment.cc  even_assignment.h  even_assignment_test.cc  weighted_even_assignment.cc  weighted_even_assignment.h  weighted_even_assignment_test.cc
base/: BUILD.bazel  commandlineflags.h
example/: BUILD.bazel  example.cc  example.h  example_plugin.cc
experimental/: BUILD.bazel  assignment_example_main.cc  integer_programming_example_main.cc  linear_sum_assignment_example_main.cc
hello_world/: BUILD.bazel  hello_world.cc
solver/: BUILD.bazel
