load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

cc_shared_library(
    name = "assignment",
    additional_linker_inputs = select({
        "@platforms//os:windows": ["//assignment:assignment.def"],
        "//conditions:default": [],
    }),
    win_def_file = select({
        "@platforms//os:windows": "//assignment:assignment.def",
        "//conditions:default": None,
    }),
    deps = ["//assignment:assignment_plugin"],
)

cc_shared_library(
    name = "example",
    features = select({
        "@platforms//os:windows": ["windows_export_all_symbols"],
        "//conditions:default": [],
    }),
    deps = ["//example:example_plugin"],
)

pkg_tar(
    name = "plugins",
    srcs = [":assignment"],
    extension = ".tar.gz",
)
