module(name = "micromissiles-unity-plugins")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.2",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "eigen",
    version = "4.0.0-20241125",
)
bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "platforms",
    version = "0.0.10",
)
bazel_dep(
    name = "protobuf",
    version = "29.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)
bazel_dep(
    name = "rules_go",
    version = "0.50.1",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
)
bazel_dep(
    name = "rules_python",
    version = "1.0.0",
)
bazel_dep(
    name = "scip",
    version = "9.2.0.bcr.3",
)
bazel_dep(
    name = "zlib",
    version = "1.3.1.bcr.4",
)

# Google OR-Tools.
ORTOOLS_VERSION = "9.12"

http_archive(
    name = "ortools",
    sha256 = "de7a743c8ec097ab8906c1e00ea782ee8a4fe4ec297e15d7bdf3a187b2f8829c",
    strip_prefix = "or-tools-{}".format(ORTOOLS_VERSION),
    url = "https://github.com/google/or-tools/archive/refs/tags/v{}.tar.gz".format(ORTOOLS_VERSION),
)
